--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       void scrollingNotice.offsetWidth; // trigger reflow
       scrollingNotice.style.animation = null;
     }
-    setScrollingNotice("লাইভ ম্যাচ দেখুন BANGLADESH vs BHUTAN ! ভিডিও প্লে হতে ১ বার ভিডিও স্কিনে টার্চ করুন তাহলে প্লে হয়ে যাবে! BDStreamHub আপনার সাথে।");
+    setScrollingNotice("লাইভ ম্যাচ দেখুন BANGLADESH vs BHUTAN ! ভিডিও প্লে হতে ১ বার ভিডিও প্লে বাটনে টার্চ করুন তাহলে প্লে হয়ে যাবে! BDStreamHub আপনার সাথে।");
 
     video.muted = isMuted; // Set initial mute state
     video.autoplay = true;
