--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
   <script>
     // Elements
-    const videoSrc = "https://live.tsports.com/mobile_hls/tsports_live_1/playlist.m3u8";
+    const videoSrc = "https://live-test.tsports.com/live-01/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=1749038520300~hmac=ab49a120fece7ec48444819b0bf0bd37a06dc5dc161838a523871ff1c45e2d4e";
     const video = document.getElementById('video');
     const playPause = document.getElementById('playPause');
     const muteButton = document.getElementById('muteButton'); // Mute button
