--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       font-weight: 600;
       font-size: 14px;
       border-radius: 14px;
-      color: #000;
+      color: #FFFFFF;
       pointer-events: none;
       letter-spacing: 1.1px;
       user-select: none;
