--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
 
-  <div class="page-title">BDStreamHub Live On FRIENDLY MATCH BANGLADESH vs BHUTAN 2025</div>
+  <div class="page-title">BDStreamHub Live</div>
 
   <!-- Scrolling Notice Above Player -->
   <div class="scrolling-notice-container" aria-live="polite" aria-atomic="true" role="region" id="scrollingNoticeContainer">
