--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   </div>
 
   <div class="player-container" tabindex="0" id="playerContainer">
-    <video id="video" poster="https://image.tsports.com/images/mobile_thumbnail/1748953055-BAN-v-Bhutan-ott-1280.jpg" playsinline muted></video>
+    <video id="video" poster="https://outspoken.newagebd.com/files/img/202506/3d2836a97128e20ce9fdae08ff2e8fda.jpg" playsinline muted></video>
     <div class="watermark">BDStreamHub</div>
     <div class="controls" id="controls">
       <button id="playPause" title="Play/Pause">⏸️</button>
