--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   </div>
 
   <div class="player-container" tabindex="0" id="playerContainer">
-    <video id="video" poster="https://outspoken.newagebd.com/files/img/202506/3d2836a97128e20ce9fdae08ff2e8fda.jpg" playsinline muted></video>
+    <video id="video" poster="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDxZ-X-3ezxmSu8FbmhxEQL7WDpwxLc1o08gNoVISLTZkboVHuOfoVIrM&s=10" playsinline muted></video>
     <div class="watermark">BDStreamHub</div>
     <div class="controls" id="controls">
       <button id="playPause" title="Play/Pause">⏸️</button>
@@ -306,7 +306,7 @@
       void scrollingNotice.offsetWidth; // trigger reflow
       scrollingNotice.style.animation = null;
     }
-    setScrollingNotice("লাইভ ম্যাচ দেখুন BANGLADESH vs SINGAPORE  ! ভিডিও প্লে হতে ১ বার ভিডিও প্লে বাটনে টার্চ করুন তাহলে প্লে হয়ে যাবে! BDStreamHub আপনার সাথে।");
+    setScrollingNotice("লাইভ ম্যাচ দেখুন Ecuador vs Brazil! ভিডিও প্লে হতে ১ বার ভিডিও প্লে বাটনে টার্চ করুন তাহলে প্লে হয়ে যাবে! BDStreamHub আপনার সাথে।");
 
     video.muted = isMuted; // Set initial mute state
     video.autoplay = true;
