--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
   <script>
     // Elements
-    const videoSrc = "https://x4-cdnnew.newkso.ru/x4-cdn/mono21/mono.m3u8";
+    const videoSrc = "https://hipaf6u2j3pwygg.nice-flower.store/v4/variant/VE1gTdz0mLzRnLv52bt9SMhFjdtM3ajFmc09iMwMmZhJGZxYjZiJWLwEmZi1CO4YDNtcjMxQTL4U2MwMmN2I2L.m3u8";
     const video = document.getElementById('video');
     const playPause = document.getElementById('playPause');
     const muteButton = document.getElementById('muteButton'); // Mute button
